# ge-control

./: .gitignore  LICENSE  MERGE_NOTES.md  NOTICE  Procfile  README.md  cfdi_parser.py  choice.html  generate_ge_png_assets.js  gitignore  json_schema.py  login.html  main.py  parser.py  pyproject.toml  render.yaml  schemas.py  supabase_config.py  test_cfdi_parser.py  test_pipeline.py  transformer.py  upload.py  validator.py
config/: auth.json  auth.json.example  cliente.py  providers.json  settings.json
docs/: arquitectura_saas_multiempresa_20260515.md  bloque_d_modulos_pendientes_20260526.md  configuracion_sw_sapien_pruebas.md  docs_inventory_report.md  documentation_cleanup_plan_v2.md  fase1_blindaje_endpoints_sensibles_20260606.md  fase1_blindaje_logs_seguros_20260606.md  fase2_blindaje_scope_logs_calculo_20260606.md  gas_lp_admin_asistente_roadmap_20260526.md  gas_lp_cancelacion_fiscal_motivo_01_20260603.md  gas_lp_excel_facilities_import_runbook.md  gas_lp_facilities_profile_map_grupoemurcia_staging.example.json  gas_lp_fase4_cierre_local_20260526.md  gas_lp_frontend_structure_20260606.md  gas_lp_hyp_evidencia_2026-06-02.md  gasolineras_decommission_fase2_20260606.md  gasolineras_decommission_fase3b_20260606.md  gasolineras_market_pipeline_runbook.md  investigacion_cfdi_transporte_sw_sapien_20260513.md  logout_sat_e2e_validation_20260527.md  production_go_no_go_20260526.md  repo_hygiene_20260529.md  sat_sync_cargas_detectadas.md  security_hardening_20260515.md  security_hardening_rls_storage_20260522.md  security_rls_storage_audit_20260522.md  (+10 more)
models/: schemas.py  (+2 more)
(+383 files in other folders)
