[project]
name = "z-control"
version = "3.1.0"
description = "Z.Control — Anexo 30 SAT (Gas LP / Transporte) — backend FastAPI con Supabase Auth"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "supabase>=2.9.0",
    "pydantic[email]>=2.9.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "jsonschema>=4.23.0",
    "lxml>=5.3.0",
    "requests>=2.32.0",
]

[tool.uv]
package = false
